--- a/client/supermarket-app/src/app/components/cart-page/cart-page.component.css
+++ b/client/supermarket-app/src/app/components/cart-page/cart-page.component.css
@@ -1,11 +1,3 @@
-/* .item-img {
-  width: 120px;
-  height: 120px;
-  border-radius: 4px;
-  position: relative;
-  left: 400px;
-  top: 40px;
-} */
 
 .item-container {
   height: 180px;
@@ -54,6 +46,15 @@
 }
 
 .item-list{
+  width: 350px;
   text-align: center;
-  margin-top: 15px;
+  position: relative;
+  right: -358px;
+  margin-bottom: -46px;
+}
+.search-by-name{
+  margin-bottom: 20px;
+}
+span{
+  color: rgb(247, 120, 97);
 }
