--- a/client/supermarket-app/src/app/components/customer/customer.component.css
+++ b/client/supermarket-app/src/app/components/customer/customer.component.css
@@ -1,10 +1,20 @@
 div img {
-  margin: 45px;
+  margin: 10px;
   width: 400px;
   height: 550px;
 }
 
 #img-info {
   width: 900px;
-  height:500px ;
+  height: 500px;
+}
+
+.pic-h1 {
+  position: relative;
+  top: -364px;
+  font-size: 50px;
+  font-weight: 800;
+  letter-spacing: 2px;
+  line-height: 70px;
+  color: rgb(248, 95, 95);
 }
