--- a/client/supermarket-app/src/app/components/customer/customer.component.html
+++ b/client/supermarket-app/src/app/components/customer/customer.component.html
@@ -1,36 +1,3 @@
-<!-- 
-<div *ngIf="this.isCartOpen ===2 || this.isCartOpen ===3"  id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" >
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    </div>
-    
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../../../assets/fresh vegi.jpeg" class="d-block w-100" alt="freshVegi">
-      </div>
-      <div class="carousel-item">
-        <img src="../../../assets/cheese.jpg" class="d-block w-100" alt="cheese">
-      </div>
-      <div class="carousel-item">
-        <img src="../../../assets/red_meat.jpg" class="d-block w-100" alt="meat">
-      </div>
-      <div class="carousel-item">
-        <img src="../../../assets/bread.jpg" class="d-block w-100" alt="bread">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> -->
-
   <div>
     <h1>{{this.cartStatusMessage}}</h1>
   </div>
@@ -43,19 +10,20 @@
 <div *ngIf="this.isCartOpen ===2 || this.isCartOpen ===3">
   <div>
     <img src="../../../assets/fresh vegi.jpeg" alt="fresh vegi" id="img-info">
-    <h1>Every day fresh vegetables are being harvested from the field  </h1>
+    <h1 class="pic-h1">Every day fresh vegetables are<br>being harvested from the field  </h1>
 </div>
 <div>
   <img src="../../../assets/cheese.jpg" alt="cheese" id="img-info">
-  <h1>Quality dairy products are being shipped from around the world</h1>
+  <h1 class="pic-h1">Quality dairy products are being<br>shipped from around the world</h1>
 </div>
 <div>
   <img src="../../../assets/red_meat.jpg" alt="red_meat" id="img-info">
-  <h1>Variety of different meat with quality taste </h1>
+  <h1 class="pic-h1">Variety of different meat<br> with
+     quality taste </h1>
 </div>
 <div>
   <img src="../../../assets/bread.jpg" alt="bread" id="img-info">
-  <h1>Daily baked bread straight from the oven</h1>
+  <h1 class="pic-h1">Daily baked bread straight from <br> the oven</h1>
 </div>
 </div>
 
