--- a/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
+++ b/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
@@ -3,8 +3,15 @@
     <img src="../../../assets//entrace pic.jpg" alt="entracePic" class="entrace-pic">
     <h2>Updated number of products in our store:{{this.productsCount}}</h2>
     <h2>Number of orders made in our store: {{this.ordersCount}}</h2>
+    <hr>
+    <h3><b>user:</b> tester2@tester.com /
+        <b>password</b>: 12345678 
+    </h3>
+    <h3><b>admin:</b> admin@admin.com /
+        <b>password:</b> 12345678 
+    </h3>
 </div>
-
+<b></b>
 <div class="form-container">
 <button mat-raised-button color="primary" *ngIf="isHandleSignUp" (click)='handleSignUp()'>Click here to create new account</button>
 <button mat-raised-button color="primary" *ngIf="isHandleSignIn" (click)='handleSignIn()'>Click here if you are already have an account</button>
