--- a/client/supermarket-app/src/app/components/footer/footer.component.html
+++ b/client/supermarket-app/src/app/components/footer/footer.component.html
@@ -1,10 +1,4 @@
 
-<p><b>regular user:</b>
-    tester2@tester.com
-    password: 12345678
-</p>
-<p><b>admin user:</b>
-    admin@admin.com
-    password: 12345678
-</p>
-<p>© Yehonatan Vidal - Contact Us: 039700000 / vidalsupport@gmail.com</p>
+
+<span><b>  Contact Us: 039700000 / vidalsupport@gmail.com </b></span><br>
+<span>© Yehonatan Vidal </span>
